<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".InfoActivity"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:text="@string/ratingSummary_text"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/ratingsBy_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:text="@string/ratingsBy_text"
            android:textSize="20sp"
            android:textStyle="italic"
            android:layout_gravity="right"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/rating_textView"
            android:text="@string/noRatings_text"
            android:textSize="20sp"
            android:layout_margin="20dp" />

    </LinearLayout>
</ScrollView>